test/expected/unterminated_quote_compound_list.out
shit: 2:11: error: Unterminated string literal.
     2 |  echo;hello"helloworld
       |            ^~~~~~~~~~~ here.
shit: 2:22: note:
     2 |  echo;hello"helloworld
       |                       ^~ Expected " here.
